src/test/ui/ffi_const2.stderr
error[E0757]: `#[ffi_const]` function cannot be `#[ffi_pure]`
  --> $DIR/ffi_const2.rs:4:5
   |
LL |     #[ffi_pure]
   |     ^^^^^^^^^^^

error: aborting due to previous error

